Fixed issue with booking button on iphone 5 sized screens

--- a/style.scss
+++ b/style.scss
@@ -292,6 +292,7 @@ header {
     box-sizing: border-box;
     width: 308px;
     height: 66px;
+    max-width: 100%;
 
     padding: 16px 0px 22px;
     border: 2px solid #8acfe6;
@@ -340,6 +341,7 @@ header {
         a {
           display: flex;
           justify-content: center;
+          max-width: 100%;
 
           margin: 0;
           background: #e3170a;
